--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -26,5 +26,6 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material 
-      - run: mkdocs gh-deploy --force
-        working-directory: ./docs/workshop/docs
+      - run: |
+          cd docs/workshop
+          mkdocs gh-deploy --force
