changed 'workshop' to 'guide'

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@
 # ---------------------------------
 
 # Project Information .........................................
-site_name: "Agentic Shop - Workshop Guide"
+site_name: "Agentic Shop - Guide"
 site_url: https://github.com/Azure-Samples/postgres-agentic-shop
 site_author: Azure-Samples
 site_description: >
